<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">RightPrice</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="fechar">Fechar</string>
    <string name="nova_password">Nova Password:</string>
    <string name="Login">Login</string>
    <string name="Registar">Registar</string>
    <string name="ndOpen">Abrir</string>
    <string name="ndClose">Fechar</string>
    <string name="estatistica">Estatistica</string>
    <string name="funcao">Função</string>
    <string name="nome">Nome</string>
    <string name="empresa">Empresa: </string>
    <string name="imagem_utilizador">imagem_utilizador</string>
    <string name="imagem_cliente_instalador">imagem_cliente_instalador</string>
    <string name="nif">Nif:</string>
    <string name="telemovel">Telemovel:</string>
    <string name="nome_com_dois_pontos">Nome:</string>
    <string name="categoria">Categoria:</string>
    <string name="aceitar_utilizador">Aceitar Utilizador</string>
    <string name="telemovel_com_dois_pontos">Telemovel:</string>
    <string name="detalhes_utilizador_com_dois_pontos">Detalhes do utilizador: \</string>
    <string name="Sem_utilizador_para_aceitar">Sem utilizador para aceitar</string>
    <string name="ligar_com_dois_pontos">Ligar:</string>
    <string name="banir_utilizador">Banir Utilizador</string>
    <string name="desbanir_utilizador">Desbanir Utilizador</string>

    <string name="title_activity_notificacao">NotificacaoActivity</string>
    <string name="email_invalido">Email Inválido</string>
    <string name="password_invalida">Password Inválida</string>
    <string name="ip">IP</string>
    <string name="Erro_Carregar_categoria">Erro a carregar a categoria</string>
    <string name="erro_carregar_nome_empresa">Erro a carregar a Empresa a Fornecer</string>
    <string name="minha_area">Minha Área</string>
    <string name="sem_nome">Sem Nome</string>
    <string name="sem_funcao_atribuida">Sem Função atribuida</string>
    <string name="sem_empresa_Atribuida">Sem empresa atribuida</string>
    <string name="sem_ligacao_internet">Sem ligação à internet</string>
    <string name="sem_imagem_atribuida">Sem imagem atribuida</string>
    <string name="sem_telemovel_atribuida">Sem telemovel atribuido</string>
    <string name="username">Username</string>
    <string name="funcao_com_dois_pontos">Função:</string>
    <string name="categoria_com_dois_pontos">Categoria:</string>
    <string name="sem_internet">Sem Internet</string>
    <string name="erro_carrregar_categorias">Servidor nao respondeu para carregar as categorias. As categorias que estão apresentadas são as que voce ja as tens</string>
    <string name="erro_registar">Erro a registar o utilizador no servidor. Contacte o suporte</string>
    <string name="erro_login_servidor">Erro a fazer o login. Contacte a administração</string>
    <string name="erro_da_aplicacao">Erro da aplicação</string>
    <string name="nome_da_empresa">Nome da Empresa:</string>
    <string name="perfil">Perfil</string>
    <string name="imagem_de_perfil">Imagem de Perfil:</string>
    <string name="administra_o">Administração:</string>
    <string name="para_qualquer_d_vida_ou_problema_contacte_a_administra_o">Para qualquer dúvida ou problema contacte a administração</string>
    <string name="telefone">Telefone:</string>
    <string name="maxixo_numeros_telefone">Maximo de numeros são 9</string>
    <string name="erro_atualizar_seus_dados">Erro a atualizar os seus Dados. Tente mais tarde</string>
    <string name="dados_atualizados_com_sucesso">Seus Dados Atualizados com sucesso</string>
    <string name="estatistica_geral">Estatistica Geral:</string>
    <string name="n_mero_de_utilizadores_do_sistema">Número de utilizadores do sistema:</string>
    <string name="n_mero_de_utilizadores_pendentes">Número de utilizadores Pendentes:</string>
    <string name="total_de_categorias">Total de Categorias:</string>
    <string name="permiss_es_da_aplica_o">Permissões da aplicação</string>
    <string name="sistema_cloud">Sistema Cloud:</string>
    <string name="deixe_todas_as_preocupa_oes_e_atualiza_es_para_n_s_com_o_nosso_sistema_cloud_pode_focar_se_inteiramente_no_seu_neg_cio">Deixe todas as preocupaçoes e atualizações para nós! Com o nosso sistema Cloud pode focar-se inteiramente no seu negócio</string>
    <string name="or_amenta_o">ORÇAMENTAÇÃO:</string>
    <string name="o_nosso_sistema_de_or_amenta_o_permite_entregar_ao_seu_cliente_um_or_amento_em_breves_momentos">O nosso sistema de orçamentação permite entregar ao seu cliente um orçamento em breves momentos.</string>
    <string name="sem_numero_para_ligar">Sem numero para poder ligar</string>
    <string name="verifique_coneccao_servidor">Verifique a conecção com o servidor</string>
    <string name="erro_alterar_dados_servidor">Erro a alterar dados no servidor</string>
    <string name="funcao_nao_encontrada">Funcão não encontrada</string>
    <string name="erro_carregar_função">Erro a carregar a função</string>
    <string name="as_minhas_estatistica">As minhas Estatistica</string>
    <string name="n_mero_de_produtos_que_quem">Número de Produtos que quem:</string>
    <string name="quantidade_de_utilizadores_que_tem">Quantidade de utilizadores que tem:</string>
    <string name="rightprice">RightPrice</string>
    <string name="mission">Mission</string>
    <string name="work_less_do_more_and_dont_stop">Work less, Do More, And Dont Stop</string>
    <string name="produto_adicionado_sucesso">Produto adicionado com sucesso</string>
    <string name="produto_editado_com_sucesso">Produto Editado com sucesso</string>
    <string name="erro_carregar_produtos">Erro a carregar os seus produtos</string>
    <string name="title_activity_detalhes_cliente_fornecedor">DetalhesClienteFornecedor</string>
    <string name="instalador_removido_com_sucesso">Instalador removido com sucesso</string>
    <string name="erro_carregar_seus_instaladores">Erro a carregar os seus instaladores</string>
    <string name="erro_produto">Nome Produto</string>
    <string name="refer_ncia">Referência</string>
    <string name="descricao">Descrição</string>
    <string name="preco">Preço</string>
    <string name="detalhes_produto_com_dois_pontos">Detalhes Produto: \</string>
    <string name="preencha_todos_os_campos">Preencha todos os campos</string>
    <string name="erro_guardar_dados_produto">Erro a guardar os dados do produto</string>
    <string name="erro_apagar_instalador">Erro a apagar instalador</string>
    <string name="remover_instalador">Remover instalador</string>
    <string name="pretende_remover_o_instalador">Pretende remover mesmo o instalador?</string>
    <string name="instalador_removido">Instalador removido</string>
    <string name="sem_email">Sem email</string>
    <string name="n_mero_de_clientes_que_tem">Número de Clientes que tem</string>
    <string name="quantidade_de_seus_instaladores">Quantidade de seus instaladores</string>
    <string name="total_orcamentos">Total Orcamentos</string>
    <string name="escolher">Escolher</string>
    <string name="alterar">Alterar</string>
    <string name="erro_carregar_clientes">Erro a carregar os CLientes</string>
    <string name="erro_carregar_orcmaentos">Erro a carregar os orcamentos</string>
    <string name="quantidade_dos_seus_fornecedores">Quantidade dos seus fornecedores</string>
    <string name="title_activity_detalhes_fornecedor">DetalhesFornecedor</string>
    <string name="fornecedor_removido_com_sucesso">Fornecedor Removido com Sucesso</string>
    <string name="Erro_carregar_instaladores">Erro a carregar os instaladores</string>
    <string name="erro_carregar_fornecedores">Erro a carregar os Fornecedores</string>
    <string name="erro_carregar_seus_fornecedores">Erro a carregar os seus Fornecedores</string>
    <string name="erro_apagar_fornecedor">Erro a apagar fornecedor</string>
    <string name="remover_fornecedor">Remover Fornecedor</string>
    <string name="prertende_remover_o_fornecedor">Pretende remover o fornecedor</string>
    <string name="fornecedor_adicionado_sua_lista">\"Fornecedor adicionado com sucesso a sua lista \"</string>
    <string name="erro_carregar_novos_fornecedores">Erro a carregar novo fornecedores</string>
    <string name="cliente_adicionado_com_sucesso">Cliente adicionado com sucesso</string>
    <string name="cliente_editado_com_sucesso">Cliente editado com sucesso</string>
    <string name="enviar_email">Enviar Email</string>
    <string name="detalhes_cliente">Detalhes Cliente: </string>
    <string name="sem_nif">Sem Nif</string>
    <string name="adicionar_cliente">Adicionar cliente</string>
    <string name="cancelar_cliente">Cancelar cliente</string>
    <string name="pretende_sair_sem_guardar_os_dados">Pretende sair sem guardar os dados?</string>
    <string name="erro_adicionar_cliente">Erro a adicionar cliente</string>
    <string name="erro_editar_cliente">Erro a editar cliente</string>
    <string name="erro_adicionar_na_base_de_dados">Erro a adicionar cliente na base de dados</string>
    <string name="orcamento_adicionado_com_sucesso">Orçamento adicionado com sucesso</string>
    <string name="orcamento_editado_com_sucesso">Orçamento editado com sucesso</string>
    <string name="erro_a_carregar_os_orçamentos">Erro a carregar os Orçamentos</string>
    <string name="detalhes_orcamento">Detalhes Orcamento: </string>
    <string name="sem_data">Sem data</string>
    <string name="adicionar_orcamento">Adicionar Orçamento</string>
    <string name="cancelar_orcamento">Cancelar orcamento</string>
    <string name="erro_carregar_produtos_orcamento">Erro a carregar os produtos do orcamento</string>
    <string name="erro_adicionar_orcamento">Erro a adicionar orçamento</string>
    <string name="Erro_editar_orcamento">Erro a editar o Orçamento</string>
    <string name="erro_carregar_produtos_fornecedor">Erro a carregaro os produtos do seu fornecedor</string>
    <string name="sem_referencia">Sem Referencia</string>
    <string name="sem_preco">Sem preco</string>
    <string name="sem_descricao">Sem Descricao</string>
    <string name="adicionar_produto">Adicionar Produto</string>
    <string name="introduza_uma_quantidade">Introduza uma quadtidade</string>
    <string name="utilizador_aceite_com_sucesso">Utilizador aceite com sucesso</string>
    <string name="utilizador_recusado_com_sucesso">Utilizador recusado com sucesso</string>
    <string-array name="funcao">
        <item>Instalador</item>
        <item>Fornecedor</item>
    </string-array>
</resources>