<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:background="@color/design_default_color_primary_dark"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="16dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">


    <ImageView
        android:id="@+id/imgView_utilizador_header"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_user"
        android:contentDescription="@string/imagem_utilizador" />

    <TextView
        android:id="@+id/TexVi_funcao_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/funcao" />

    <TextView
        android:id="@+id/tVNome_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nome" />

    <TextView
        android:id="@+id/tVEmpresa_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/empresa" />

</LinearLayout>