<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fornecedor.DetalhesProdutoFornecedor"
  >

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
      >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/Img_produto"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                app:srcCompat="@mipmap/ic_produto" />

            <EditText
                android:id="@+id/edtNomeProduto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/erro_produto"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/edtReferenciaProduto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/refer_ncia"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/edtDescricao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/descricao"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/edtPrecoProduto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/preco"
                android:digits="0123456789."
                android:inputType="number" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_detalhes_produto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="10dp"
        android:backgroundTint="#E91E63"
        android:clickable="true"
        android:src="@drawable/ic_guardar" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>