<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgVi_clientes_instalador"
            android:layout_width="83dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/imagem_cliente_instalador"
            app:srcCompat="@drawable/ic_user" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_Nome_Cliente_Instalador"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/nome_com_dois_pontos" />

                <TextView
                    android:id="@+id/tVNomeClienteInstalador"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tVTel_Cliente_Instalador"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/telemovel" />

                <TextView
                    android:id="@+id/tVTelClienteInstalador"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tVNif_cliente_instalador"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:text="@string/nif" />

                <TextView
                    android:id="@+id/tVNifClienteInstalador"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tVEmail_cliente_instalador"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:text="@string/email" />

                <TextView
                    android:id="@+id/tVEmailClienteInstalador"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>