<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Instalador.DetalhesConhecerFornecedor">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/IMGDetalhesConhecerFornecedor"
                    android:layout_width="match_parent"
                    android:layout_height="220dp" />

                <EditText
                    android:id="@+id/NomeDetalhesConhecerFornecedor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:enabled="false"
                    android:hint="@string/nome_com_dois_pontos"
                    android:inputType="textPersonName"
                    />

                <EditText
                    android:id="@+id/nome_empresaDetalhesConhecerFornecedor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:enabled="false"
                    android:hint="@string/nome_da_empresa"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/emailDetalhesConhecerFornecedor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:enabled="false"
                    android:hint="@string/email"
                    android:inputType="textPersonName" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/telefoneDetalhesConhecerFornecedor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:enabled="false"
                        android:hint="@string/telemovel_com_dois_pontos"
                        android:inputType="textPersonName" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="right"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/Btn_ligar_numero_Conhecer_Fornecedor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/main_color"
                            android:gravity="right"
                            android:text="@string/ligar_com_dois_pontos"></Button>
                    </LinearLayout>

                </LinearLayout>

                <EditText
                    android:id="@+id/categoriaDetalhesConhecerFornecedor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:enabled="false"
                    android:hint="@string/categoria_com_dois_pontos"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">
                <Button
                    android:id="@+id/btn_acetiar_fornecedor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/main_color"
                    android:gravity="right"
                    android:text="Adicionar Fornecedor"></Button>
            </LinearLayout>




        </LinearLayout>
    </androidx.core.widget.NestedScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>