<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_cliente_acetiar_cliente"
            android:layout_width="100dp"
            android:layout_height="136dp"
            app:srcCompat="@drawable/ic_user" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_Nome_aceitar_utilizador"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/nome_com_dois_pontos" />

                <TextView
                    android:id="@+id/tVNomeAceitarUtilizador"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tVEmpresa_aceitar_utilizador"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/empresa" />

                <TextView
                    android:id="@+id/tvEmpresaAceitarUtilizador"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tVEmail_aceitar_utilizador"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:text="@string/email" />

                <TextView
                    android:id="@+id/tvEmailAceitarUtilizador"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                     />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tVCategoria_Aceitar_Utilizador"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:text="@string/categoria" />

                <TextView
                    android:id="@+id/tvCategoriaAceitarUtilizador"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>